<?xml version="1.0"?>
<package>
  <name>innok_heros_gazebo</name>
  <version>1.0.0</version>
  <description>Innok Heros launch files for Gazebo</description>

  <maintainer email="sh@innok-robotics.de">Sabrina Heerklotz</maintainer>
  <author email="jh@innok-robotics.de">Jonathan Hechtbauer</author>

  <url type="website">http://wiki.ros.org/Robots/Innok-Heros</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>roslaunch</buildtool_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>innok_heros_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>

 

  <export>

  </export>
</package>
